tests/fixtures/invalid/none_div_list.py
# Cannot divide None and List[int]
x: float = None / [1, 2, 3]
